front end tweaks w/ clearAll edits

--- a/public/index.html
+++ b/public/index.html
@@ -10,27 +10,29 @@
     <input type="text" id="message" placeholder="Message" />
     <button id="add">Add</button>
     <button id="clear">Clear</button>
+    <ul id="list"></ul>
   </body>
   <script>
-    (function () {
-      document.addEventListener("DOMContentLoaded", () => {
-        try {
-          fetch("/api", { method: "GET" })
-            .then((response) => response.json())
-            .then((data) => {
-              console.log("Success:", data);
-            });
-        } catch ({ message }) {
-          console.log(message);
-        }
-      });
-    })();
     var title = document.querySelector("#title");
     var message = document.querySelector("#message");
     var add = document.querySelector("#add");
-    add.addEventListener("click", async (e) => {
-      var send = await fetch("/api/add", {
-        method: "POST",
+    var clear = document.querySelector("#clear");
+    const update = (obj) => {
+      try {
+        for (var item in obj) {
+          var li = document.createElement("li");
+          var title = item;
+          var message = obj[item];
+          li.innerHTML += "<p><b>" + title + ":</b>  " + message + "</p>";
+          document.querySelector("#list").append(li);
+        }
+      } catch ({ message }) {
+        console.error(message);
+      }
+    };
+    const apiRequest = async (route = "", method = "GET") => {
+      var send = await fetch("/api/" + route, {
+        method: method,
         headers: {
           Accept: "application/json",
           "Content-Type": "application/json",
@@ -39,7 +41,11 @@
           key: title.value,
           value: message.value,
         }),
-      });
-    });
+      })
+        .then((response) => response.json())
+        .then((data) => update(data));
+    };
+    add.addEventListener("click", () => apiRequest("add", "POST"));
+    clear.addEventListener("click", () => apiRequest("clear", "POST"));
   </script>
 </html>
